# PII-Data-Detection-Transformers

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  requirements.txt
configs/: config.yaml
data/: get_labels.py
piidetect/: evaluate.ipynb  train.py  train_full_fit.py
piidetect/callbacks/: __init__.py  callback.py
piidetect/config/: config.py
piidetect/data/: data.py
piidetect/metric/: __init__.py  metric.py
piidetect/utils/: utils_config.py  utils_test.py  utils_train.py
scripts/: cross_val.bash  cross_validation.py  evaluate.py  predict.py  train.bash  train.py  train_ddp.py  train_validate_hf.py
src/: deberta-training.ipynb  test.py  test_ensemble.py  train.py  train2.py  train_bis.py  train_tries.py
src/config/: config.py
src/data/: __init__.py  data.py
src/metric/: metric.py
src/utils/: utils_config.py  utils_data.py  utils_test.py  utils_train.py
tests/metric/: test_metric.py
